[tool.poetry]
name = "black-isort-flake8-envconfig"
version = "0.1.0"
description = ""
authors = ["DellaCortef <felipe.dellacorte@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
