[tool.poetry]
name = "black-isort-flake8-envconfig"
version = "0.1.0"
description = ""
authors = ["DellaCortef <felipe.dellacorte@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
taskipy = "^1.14.1"
pre-commit = "^4.0.1"
duckdb = "^1.1.3"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
